cleans a few little css layout bugs up

--- a/docs/theme/static/styles/_guides.less
+++ b/docs/theme/static/styles/_guides.less
@@ -42,9 +42,10 @@ body.Guides:not(.Guide):not(.place-my-order) {
 		.app-thumbs {
 			float: left;
 			margin-right:30px;
-			@media(max-width: @screen-xs){
+			@media(max-width: @screen-xs-max){
 				float:none;
 				margin: 0 0 20px 0;
+				display: block;
 			}
 		}
 		ul {
